agentic/n8n/k8s/n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-deployment
  namespace: n8n
  labels: &labels
    app: n8n
spec:
  replicas: 1
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      serviceAccountName: n8n
      imagePullSecrets:
        - name: quay-io-dkcapgemini
      containers:
      - name: n8n
        image: quay.io/dkcapgemini/n8nmcp:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 5678
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5678
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5678
        resources:
          limits:
            cpu: "1.0"
            memory: "1024Mi"
          requests:
            cpu: "0.5"
            memory: "512Mi"
